--- a/Css/style.css
+++ b/Css/style.css
@@ -30,7 +30,8 @@ nav {
     line-height: 50px;
     cursor: pointer;
     font-weight: 600;
+    color: white;
 }
 .ls-blue {
-    background-color: rgb(230, 230, 20);
+    background-color: rgb(24, 20, 230);
 }
